--- a/type_master/type_master/static/css/index.css
+++ b/type_master/type_master/static/css/index.css
@@ -38,6 +38,7 @@
     margin-left: 3px;
     padding: 0;
     font-size: var(--test-font-size);
+    line-height: var(--test-font-size);
     font-weight: 200;
 }
 
@@ -101,6 +102,7 @@
 #counter{
     display: block;
     font-size: calc(var(--test-font-size) + 10px);
+    line-height: calc(var(--test-font-size) + 10px);
     color: #0057d6;
     position: absolute;
     top: 50%; 
@@ -110,6 +112,7 @@
 #challenge-counter{
     display: block;
     font-size: 40px;
+    line-height: 40px;
     color: var(--medium-color-value);
     margin-left: auto;
 }
@@ -120,6 +123,7 @@
     background: none;
     border: none;
     font-size: 30px;
+    line-height: 30px;
     color: var(--medium-color-value); 
     border-radius: 20px;
     transition: color 0.1s ease-in;
@@ -187,12 +191,14 @@
         margin: 0;
         padding: 0;
         font-size: 100px;
+        line-height: 150px;
         color: #0057d6;
     }
     & span{
         margin: 0;
         padding: 0;
         font-size: 65px;
+        line-height: 65px;
         color: #0057d6;
     }
     & .star-result, & .stat-result{
@@ -210,6 +216,7 @@
     }
     & p{
         font-size: 30px;
+        line-height: 30px;
         margin: 0;
         color: var(--medium-color-value);
         transition: color 0.1s ease-in;
@@ -220,11 +227,13 @@
     & .stat-result{
         & span{
             font-size: 30px;
+            line-height: 30px;
             width: max-content;
             margin: 0;
         }
         & li{
             font-size: 30px;
+            line-height: 30px;
             display: contents;
             gap: 5px;
             margin: 0;
@@ -249,6 +258,7 @@
         margin: 0;
         padding: 0;
         font-size: 60px;
+        line-height: 60px;
         color: var(--medium-color-value); 
         height: auto;
     }
@@ -265,6 +275,7 @@
         background-color: transparent;
         border: none;
         font-size: 25px;
+        line-height: 25px;
         color: var(--high-color-value);
         border-radius: 5px; 
         text-align: center;
@@ -328,8 +339,8 @@
     background-color: transparent;
     border: none;
     color: var(--medium-color-value); 
-    font-size: 20px;
     font-size: 1.2rem;
+    line-height: 1.2rem;
     transition: color 0.1s ease-in;
 }
 .text-button:hover:not(.option-active), .text-mode:hover:not(.option-active), .text-button:focus:not(.option-active), .text-mode:focus:not(.option-active){
@@ -337,6 +348,7 @@
 }
 .text-button i,.text-mode i{
     font-size: 14px;
+    line-height: 14px;
     pointer-events: none;
 } 
 .option-active{
@@ -356,11 +368,12 @@
     background-color: transparent;
     border: none;
     color: var(--medium-color-value); 
-    font-size: 20px;
     font-size: 1.2rem;
+    line-height: 1.2rem;
     transition: color 0.1s ease-in;
     & i{
         font-size: 14px;
+        line-height: 14px;
         pointer-events: none;
     }
 }
