--- a/type_master/type_master/static/css/login.css
+++ b/type_master/type_master/static/css/login.css
@@ -24,6 +24,7 @@ body {
 h2{
     color: #0057d6;
     font-size: 30px;
+    line-height: 30px;
 }
 button{
     height: 80px;
@@ -33,4 +34,5 @@ button{
     border-radius: 20px;
     color:var(--background-color);
     font-size: 20px;
+    line-height: 20px;
 }
